gio: Generate Seekable

--- a/Gir.toml
+++ b/Gir.toml
@@ -46,6 +46,7 @@ generate = [
     "Gio.ResolverRecordType",
     "Gio.ResourceError",
     "Gio.ResourceLookupFlags",
+    "Gio.Seekable",
     "Gio.SettingsBindFlags",
     "Gio.SettingsSchema",
     "Gio.SimpleActionGroup",
@@ -90,6 +91,7 @@ manual = [
     "GLib.Variant",
     "GLib.VariantType",
     "GLib.IOCondition",
+    "GLib.SeekType",
     "GLib.Source",
     "GLib.Priority",
     "GObject.Object",
