gio: Bind TlsFileDatabase

--- a/Gir.toml
+++ b/Gir.toml
@@ -75,6 +75,7 @@ generate = [
     "Gio.TlsDatabase",
     "Gio.TlsDatabaseLookupFlags",
     "Gio.TlsDatabaseVerifyFlags",
+    "Gio.TlsFileDatabase",
     "Gio.TlsInteraction",
     "Gio.TlsInteractionResult",
     "Gio.TlsPasswordFlags",
