--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
     - libgtk-3-dev
 script:
   - rustc --version
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
+    make regen_check;
+    fi
   - cargo test --features "embed-lgpl-docs v2_40" --jobs 1
   - cargo doc --features "dox"
   # catch any sneaked in lgpl docs
