--- a/conf/gir-gtk.toml
+++ b/conf/gir-gtk.toml
@@ -17,3 +17,11 @@ external_libraries = [
 manual = [
    "xlib.Window",
 ]
+
+ignore = [
+	"Gtk.BINARY_AGE",
+	"Gtk.INTERFACE_AGE",
+	"Gtk.MAJOR_VERSION",
+	"Gtk.MICRO_VERSION",
+	"Gtk.MINOR_VERSION",
+]
