--- a/Gir.toml
+++ b/Gir.toml
@@ -83,6 +83,8 @@ generate = [
     "Gio.TlsPasswordFlags",
     "Gio.TlsRehandshakeMode",
     "Gio.TlsServerConnection",
+    "Gio.UnixSocketAddress",
+    "Gio.UnixSocketAddressType",
 ]
 
 ignore = [
