--- a/Gir.toml
+++ b/Gir.toml
@@ -410,6 +410,12 @@ status = "generate"
 name = "Gio.UnixSocketAddress"
 status = "generate"
 cfg_condition = "unix"
+    [[object.function]]
+    name = "get_path"
+    ignore = true
+    [[object.property]]
+    name = "path"
+    ignore = true
 
 [[object]]
 name = "Gio.UnixSocketAddressType"
