--- a/glib-sys/Cargo.toml
+++ b/glib-sys/Cargo.toml
@@ -5,6 +5,10 @@ pkg-config = "0.3.7"
 bitflags = "1.0"
 libc = "0.2"
 
+[dev-dependencies]
+shell-words = "0.1.0"
+tempdir = "0.3"
+
 [features]
 dox = []
 v2_34 = []
