--- a/gtk-sys/Cargo.toml
+++ b/gtk-sys/Cargo.toml
@@ -37,6 +37,10 @@ version = "0.6.0"
 path = "../pango-sys"
 version = "0.6.0"
 
+[dev-dependencies]
+shell-words = "0.1.0"
+tempdir = "0.3"
+
 [features]
 dox = []
 v3_10 = ["v3_8"]
