gio: Remove Cancellable::reset()
It can easily cause undefined behaviour, see
https://github.com/gtk-rs/gio/pull/102#issuecomment-379690071

--- a/Gir.toml
+++ b/Gir.toml
@@ -140,6 +140,10 @@ name = "Gio.Cancellable"
 status = "generate"
 trait = false
 concurrency = "send+sync"
+    [[object.function]]
+    name = "reset"
+    #undefined behaviour
+    ignore = true
 
 [[object]]
 name = "Gio.DataInputStream"
