gio: Remove g_cancellable_source_new
It would need manual bindings to set the source callback, etc and is not
very useful on its own.

--- a/Gir.toml
+++ b/Gir.toml
@@ -150,6 +150,10 @@ concurrency = "send+sync"
     name = "reset"
     #undefined behaviour
     ignore = true
+    [[object.function]]
+    name = "source_new"
+    # Needs manual bindings for setting callback, etc
+    ignore = true
 
 [[object]]
 name = "Gio.DataInputStream"
