--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ v2_50 = ["v2_48", "gio-sys/v2_50"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
+futures = ["futures-core", "futures-executor", "futures-channel", "futures-util", "glib/futures"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
