glib: Mark g_main_context_default as non-nullable.
The default main context is always available and non-null. Also run
test in a new separate context to avoid interference between tests.

--- a/Gir.toml
+++ b/Gir.toml
@@ -329,6 +329,11 @@ concurrency = "send+sync"
        # source id is a newtype
        ignore = true
 
+       [[object.function]]
+       name = "default"
+           [object.function.return]
+           nullable = false
+
 [[object]]
 name = "GLib.MainLoop"
 status = "generate"
