gio: Use SendCell to prevent Socket/Pollable*Stream to move to other threads via the GSource
And mark the closure as non-Send too.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ git = "https://github.com/gtk-rs/lgpl-docs"
 libc = "0.2"
 bitflags = "1.0"
 lazy_static = "1.0"
+send-cell = "0.1"
 
 [dependencies.gio-sys]
 version = "0.6.0"
