--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ name = "glib"
 lazy_static = "1.0"
 libc = "0.2"
 bitflags = "1.0"
-futures-core = { git = "https://github.com/rust-lang-nursery/futures-rs.git", optional = true }
-futures-executor = { git = "https://github.com/rust-lang-nursery/futures-rs.git", optional = true }
-futures-channel = { git = "https://github.com/rust-lang-nursery/futures-rs.git", optional = true }
-futures-util = { git = "https://github.com/rust-lang-nursery/futures-rs.git", optional = true }
+futures-core = { version = "0.2", optional = true }
+futures-executor = { version = "0.2", optional = true }
+futures-channel = { version = "0.2", optional = true }
+futures-util = { version = "0.2", optional = true }
 
 [dependencies.glib-sys]
 version = "0.6.0"
