glib: Provide panic-safe way to change thread default context.

--- a/Gir.toml
+++ b/Gir.toml
@@ -354,6 +354,10 @@ concurrency = "send+sync"
 name = "GLib.MainLoop"
 status = "generate"
 concurrency = "send+sync"
+       [[object.function]]
+       name = "get_context"
+           [object.function.return]
+           nullable = false
 
 [[object]]
 name = "GLib.Source"
