--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ v2_50 = ["v2_48", "gio-sys/v2_50"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
-futures = ["futures-core", "futures-executor", "futures-channel", "futures-util", "glib/futures"]
+futures = ["futures-core", "futures-channel", "futures-util", "glib/futures"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
@@ -43,7 +43,6 @@ bitflags = "1.0"
 lazy_static = "1.0"
 send-cell = "0.1"
 futures-core = { version = "0.2", optional = true }
-futures-executor = { version = "0.2", optional = true }
 futures-channel = { version = "0.2", optional = true }
 futures-util = { version = "0.2", optional = true }
 
