--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,57 @@
 language: rust
-rust:
-  - nightly
-  - beta
-  - stable
-env:
-  - GTK=3.4
-  - GTK=3.18
+matrix:
+  include:
+    - os: linux
+      rust: nightly
+      env: GTK=3.4
+    - os: linux
+      rust: nightly
+      env: GTK=3.18
+    - os: linux
+      rust: beta
+      env: GTK=3.4
+    - os: linux
+      rust: beta
+      env: GTK=3.18
+    - os: linux
+      rust: stable
+      env: GTK=3.4
+    - os: linux
+      rust: stable
+      env: GTK=3.18
+    - os: osx
+      rust: nightly
+      env: GTK=3.4
+    # - os: osx
+    #   rust: nightly
+    #   env: GTK=3.18
+    - os: osx
+      rust: beta
+      env: GTK=3.4
+    # - os: osx
+    #   rust: beta
+    #   env: GTK=3.18
+    - os: osx
+      rust: stable
+      env: GTK=3.4
+    # - os: osx
+    #   rust: stable
+    #   env: GTK=3.18
+sudo: true
 addons:
   apt:
     packages:
     - libgtk-3-dev
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+3 cairo atk; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/opt/X11/lib/pkgconfig;
+    fi
 script:
   - rustc --version
+  - cargo update
   - cargo test --features "png embed-lgpl-docs"
   - cargo test --no-default-features --features "png"
   - cargo doc --features "dox"
@@ -20,6 +60,6 @@ script:
   - git diff -R --exit-code
   - mkdir .cargo
   - echo 'paths = [".", "./cairo-sys-rs"]' > .cargo/config
-  - git clone -q --depth 50 -b pending https://github.com/rust-gnome/examples _examples
+  - git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples
   - cd _examples
   - ./build_travis.sh
