glib: Mark MainContext::ref_thread_default() as non-nullable with regards to the return value
Fixes https://github.com/gtk-rs/glib/issues/332

--- a/Gir.toml
+++ b/Gir.toml
@@ -363,6 +363,11 @@ concurrency = "send+sync"
            [object.function.return]
            nullable = false
 
+       [[object.function]]
+       name = "ref_thread_default"
+           [object.function.return]
+           nullable = false
+
 [[object]]
 name = "GLib.MainLoop"
 status = "generate"
