--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ v2_44 = ["v2_42", "gio-sys/v2_44"]
 v2_46 = ["v2_44", "gio-sys/v2_46"]
 v2_48 = ["v2_46", "gio-sys/v2_48"]
 v2_50 = ["v2_48", "gio-sys/v2_50"]
+v2_52 = ["v2_50", "gio-sys/v2_52"]
+v2_54 = ["v2_52", "gio-sys/v2_54"]
+v2_56 = ["v2_54", "gio-sys/v2_56"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
