--- a/conf/gir-atk.toml
+++ b/conf/gir-atk.toml
@@ -3,6 +3,8 @@ work_mode = "sys"
 library = "Atk"
 version = "1.0"
 min_cfg_version = "2.4"
+single_version_file = "."
+
 external_libraries = [
    "GLib",
    "GObject",
