--- a/conf/gir-gdk-pixbuf.toml
+++ b/conf/gir-gdk-pixbuf.toml
@@ -3,6 +3,8 @@ work_mode = "sys"
 library = "GdkPixbuf"
 version = "2.0"
 min_cfg_version = "2.26"
+single_version_file = "."
+
 external_libraries = [
    "GLib",
    "GObject",
