--- a/conf/gir-glib.toml
+++ b/conf/gir-glib.toml
@@ -3,6 +3,8 @@ work_mode = "sys"
 library = "GLib"
 version = "2.0"
 min_cfg_version = "2.32"
+single_version_file = "."
+
 ignore = [
 	"GLib.ANALYZER_ANALYZING",
 	"GLib.DIR_SEPARATOR",
