--- a/conf/gir-gobject.toml
+++ b/conf/gir-gobject.toml
@@ -3,6 +3,8 @@ work_mode = "sys"
 library = "GObject"
 version = "2.0"
 min_cfg_version = "2.32"
+single_version_file = "."
+
 external_libraries = [
    "GLib",
 ]
