--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ exclude = [
     "gir-files/*",
 ]
 
+[badges]
+appveyor = { repository = "GuillaumeGomez/gio", service = "github" }
+travis-ci = { repository = "gtk-rs/gio" }
+
 [lib]
 name = "gio"
 
