--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,64 @@
 language: rust
-rust:
-  - nightly
-  - beta
-  - stable
-env:
-  - GTK=3.4
-  - GTK=3.18
+matrix:
+  include:
+    - os: linux
+      rust: nightly
+      env: GTK=3.4
+    - os: linux
+      rust: nightly
+      env: GTK=3.18
+    - os: linux
+      rust: beta
+      env: GTK=3.4
+    - os: linux
+      rust: beta
+      env: GTK=3.18
+    - os: linux
+      rust: stable
+      env: GTK=3.4
+    - os: linux
+      rust: stable
+      env: GTK=3.18
+    - os: osx
+      rust: nightly
+      env: GTK=3.4
+    # - os: osx
+    #   rust: nightly
+    #   env: GTK=3.18
+    - os: osx
+      rust: beta
+      env: GTK=3.4
+    # - os: osx
+    #   rust: beta
+    #   env: GTK=3.18
+    - os: osx
+      rust: stable
+      env: GTK=3.4
+    # - os: osx
+    #   rust: stable
+    #   env: GTK=3.18
+sudo: true
 addons:
   apt:
     packages:
     - libgtk-3-dev
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+3 cairo atk; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/opt/X11/lib/pkgconfig;
+    fi
 script:
   - rustc --version
   - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
     make regen_check;
     fi
+  - cargo update
   - cargo install clippy || touch clippy_failed
   - if [ ! -f clippy_failed ]; then cargo clippy; fi
   - cargo test --features embed-lgpl-docs --jobs 1
+  - cargo doc --features "dox"
   # catch any sneaked in lgpl docs
   - cargo build --features purge-lgpl-docs --jobs 1
   - git diff -R --exit-code
