--- a/Gir.toml
+++ b/Gir.toml
@@ -48,6 +48,7 @@ generate = [
     "Gio.Seekable",
     "Gio.SettingsBindFlags",
     "Gio.SettingsSchema",
+    "Gio.SettingsSchemaSource",
     "Gio.SimpleActionGroup",
     "Gio.SimplePermission",
     "Gio.SocketAddress",
