--- a/Gir.toml
+++ b/Gir.toml
@@ -14,12 +14,18 @@ generate = [
     "Gio.ApplicationFlags",
     "Gio.AskPasswordFlags",
     "Gio.BufferedOutputStream",
+    "Gio.Converter",
+    "Gio.ConverterFlags",
+    "Gio.ConverterResult",
     "Gio.DataOutputStream",
     "Gio.DataStreamByteOrder",
     "Gio.DataStreamNewlineType",
     "Gio.Drive",
     "Gio.DriveStartFlags",
     "Gio.DriveStartStopType",
+    "Gio.Emblem",
+    "Gio.EmblemOrigin",
+    "Gio.EmblemedIcon",
     "Gio.FileCreateFlags",
     "Gio.FileInfo",
     "Gio.FileInputStream",
@@ -88,6 +94,9 @@ generate = [
     "Gio.TlsRehandshakeMode",
     "Gio.TlsServerConnection",
     "Gio.Volume",
+    "Gio.ZlibCompressor",
+    "Gio.ZlibCompressorFormat",
+    "Gio.ZlibDecompressor",
 ]
 
 ignore = [
@@ -95,6 +104,7 @@ ignore = [
 
 manual = [
     "GLib.Bytes",
+    "GLib.KeyFile",
     "GLib.Error",
     "GLib.Variant",
     "GLib.VariantType",
@@ -230,6 +240,15 @@ status = "generate"
     [[object.function]]
     name = "read_line_async"
     #return vec of u8
+    ignore = true
+
+[[object]]
+name = "Gio.DesktopAppInfo"
+status = "generate"
+cfg_condition = "not(windows)"
+    [[object.function]]
+    name = "search"
+    # returns vec of string
     ignore = true
 
 [[object]]
