gio: Improve generation

--- a/Gir.toml
+++ b/Gir.toml
@@ -38,7 +38,6 @@ generate = [
     "Gio.FileQueryInfoFlags",
     "Gio.FileType",
     "Gio.Icon",
-    "Gio.InetAddressMask",
     "Gio.InetSocketAddress",
     "Gio.IOStreamSpliceFlags",
     "Gio.IOErrorEnum",
@@ -81,9 +80,7 @@ generate = [
     "Gio.SocketService",
     "Gio.SocketType",
     "Gio.SrvTarget",
-    "Gio.Subprocess",
     "Gio.SubprocessFlags",
-    "Gio.SubprocessLauncher",
     "Gio.TcpConnection",
     "Gio.ThreadedSocketService",
     "Gio.ThemedIcon",
@@ -166,7 +163,7 @@ status = "generate"
     [[object.function]]
     name = "get"
         [object.function.return]
-	nullable = false
+        nullable = false
 
 [[object]]
 name = "Gio.AppLaunchContext"
@@ -358,6 +355,18 @@ status = "generate"
     [[object.property]]
     name = "output-stream"
     #readonly
+    ignore = true
+
+[[object]]
+name =  "Gio.InetAddressMask"
+status = "generate"
+    [[object.function]]
+    name = "get_address"
+        [object.function.return]
+        nullable = false
+    [[object.function]]
+    name = "equal"
+    # conflicting implementations
     ignore = true
 
 [[object]]
@@ -561,6 +570,40 @@ status = "generate"
 name = "Gio.SettingsSchemaKey"
 status = "generate"
 version = "2.40"
+
+[[object]]
+name = "Gio.Subprocess"
+status = "generate"
+    [[object.function]]
+    name = "newv"
+        [[object.function.parameter]]
+        name = "argv"
+        string_type = "os_string"
+
+[[object]]
+name = "Gio.SubprocessLauncher"
+status = "generate"
+    [[object.function]]
+    name = "spawnv"
+        [[object.function.parameter]]
+        name = "argv"
+        string_type = "os_string"
+    [[object.function]]
+    name = "setenv"
+        [[object.function.parameter]]
+        name = "variable"
+        string_type = "os_string"
+        [[object.function.parameter]]
+        name = "value"
+        string_type = "os_string"
+    [[object.function]]
+    name = "unsetenv"
+        [[object.function.parameter]]
+        name = "variable"
+        string_type = "os_string"
+    [[object.function]]
+    pattern = "take_.*"
+    ignore = true
 
 [[object]]
 name = "Gio.TlsPassword"
