gio: Add ListModel and ListStore bindings

--- a/Gir.toml
+++ b/Gir.toml
@@ -103,6 +103,8 @@ generate = [
     "Gio.ZlibCompressor",
     "Gio.ZlibCompressorFormat",
     "Gio.ZlibDecompressor",
+    "Gio.ListModel",
+    "Gio.ListStore",
 ]
 
 ignore = [
