glib: Test with gtk3.22.30

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ v2_48 = ["v2_46", "glib-sys/v2_48"]
 v2_50 = ["v2_48", "glib-sys/v2_50"]
 v2_52 = ["v2_50", "glib-sys/v2_52"]
 v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
+v2_56 = ["v2_54", "glib-sys/v2_56"]
 futures = ["futures-core-preview", "futures-executor-preview", "futures-channel-preview", "futures-util-preview", "v2_36"]
 futures-nightly = ["futures", "futures-core-preview/nightly", "futures-stable-preview", "futures-stable-preview/nightly"]
 dox = ["glib-sys/dox", "gobject-sys/dox"]
