--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ v3_16 = ["v3_14", "gdk-sys/v3_16", "gio/v2_42"]
 v3_18 = ["v3_16", "gdk-sys/v3_18", "gio/v2_44"]
 v3_20 = ["v3_18", "gdk-sys/v3_20", "gio/v2_48"]
 v3_22 = ["v3_20", "gdk-sys/v3_22"]
+v3_22_30 = ["v3_22", "pango/v1_40", "gio/v2_54"]
 dox = ["gdk-sys/dox", "glib/dox", "gio/dox", "gdk-pixbuf/dox", "cairo-rs/dox", "pango/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs", "gdk-pixbuf/purge-lgpl-docs", "gio/purge-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs", "gdk-pixbuf/embed-lgpl-docs", "gio/embed-lgpl-docs"]
