--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,6 @@ git = "https://github.com/gtk-rs/sys"
 [dependencies.gio]
 version = "0.4.0"
 git = "https://github.com/gtk-rs/gio"
+
+[dev-dependencies]
+gir-format-check = "^0.1"
