--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,29 +42,12 @@ libc = "0.2"
 send-cell = { version = "0.1", optional = true }
 futures-core-preview = { version = "0.2", optional = true }
 
-[dependencies.gdk-pixbuf-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.glib]
-version = "0.5.0"
-git = "https://github.com/gtk-rs/glib"
-
-[dependencies.glib-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.gobject-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.gio-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.gio]
-version = "0.4.0"
-git = "https://github.com/gtk-rs/gio"
+gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
+glib = { git = "https://github.com/gtk-rs/glib" }
+glib-sys = { git = "https://github.com/gtk-rs/sys" }
+gobject-sys = { git = "https://github.com/gtk-rs/sys" }
+gio-sys = { git = "https://github.com/gtk-rs/sys" }
+gio = { git = "https://github.com/gtk-rs/gio" }
 
 [dev-dependencies]
 gir-format-check = "^0.1"
